Bug 385637 - Discover crashes in QWindow::raise() on launch
Summary: Discover crashes in QWindow::raise() on launch
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.11.0
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2017-10-12 01:48 UTC by Szczepan Hołyszewski
Modified: 2017-11-08 12:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szczepan Hołyszewski 2017-10-12 01:48:54 UTC
Application: plasma-discover (5.11.0)

Qt Version: 5.9.2
Frameworks Version: 5.38.0
Operating System: Linux 4.13.5-1-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:

Tried to launch the Discover using its icon on the icon taskbar.

The crash can be reproduced every time.

-- Backtrace:
Application: Odkrywca (plasma-discover), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f81d17d0480 (LWP 11059))]

Thread 13 (Thread 0x7f818cc52700 (LWP 11075)):
#0  0x00007f81ccf06d4b in poll () at /usr/lib/libc.so.6
#1  0x00007f81c74dfed3 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f81c74dffae in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f81cd845cf4 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f81cd7e948b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f81cd60227e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007f81cd606fcb in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 12 (Thread 0x7f818da89700 (LWP 11071)):
#0  0x00007f81c75075f9 in g_mutex_lock () at /usr/lib/libglib-2.0.so.0
#1  0x00007f81c74dfeb8 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f81c74e0f42 in g_main_loop_run () at /usr/lib/libglib-2.0.so.0
#3  0x00007f818f155e28 in  () at /usr/lib/libgio-2.0.so.0
#4  0x00007f81c74d41eb in  () at /usr/lib/libglib-2.0.so.0
#5  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 11 (Thread 0x7f818e28a700 (LWP 11070)):
#0  0x00007f81ccf02868 in read () at /usr/lib/libc.so.6
#1  0x00007f81c7507521 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f81c74de90b in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#3  0x00007f81c74dfe76 in  () at /usr/lib/libglib-2.0.so.0
#4  0x00007f81c74dffae in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#5  0x00007f81c74e0002 in  () at /usr/lib/libglib-2.0.so.0
#6  0x00007f81c74d41eb in  () at /usr/lib/libglib-2.0.so.0
#7  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 10 (Thread 0x7f81a48b1700 (LWP 11069)):
#0  0x00007f81c96c86cd in pthread_cond_timedwait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f81cd608311 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f81cd6033f6 in  () at /usr/lib/libQt5Core.so.5
#3  0x00007f81cd606fcb in  () at /usr/lib/libQt5Core.so.5
#4  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#5  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 9 (Thread 0x7f81a50b2700 (LWP 11068)):
#0  0x00007f81c96c86cd in pthread_cond_timedwait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f81cd608311 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f81cd6033f6 in  () at /usr/lib/libQt5Core.so.5
#3  0x00007f81cd606fcb in  () at /usr/lib/libQt5Core.so.5
#4  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#5  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 8 (Thread 0x7f81a5aba700 (LWP 11067)):
#0  0x00007f81c96c86cd in pthread_cond_timedwait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f81cd608311 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f81cd6033f6 in  () at /usr/lib/libQt5Core.so.5
#3  0x00007f81cd606fcb in  () at /usr/lib/libQt5Core.so.5
#4  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#5  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 7 (Thread 0x7f81a6951700 (LWP 11066)):
#0  0x00007f81c96c86cd in pthread_cond_timedwait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f81cd608311 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f81cd6033f6 in  () at /usr/lib/libQt5Core.so.5
#3  0x00007f81cd606fcb in  () at /usr/lib/libQt5Core.so.5
#4  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#5  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 6 (Thread 0x7f81a7152700 (LWP 11065)):
#0  0x00007f81ccf06d4b in poll () at /usr/lib/libc.so.6
#1  0x00007f81c74dfed3 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f81c74dffae in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f81cd845cf4 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f81cd7e948b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f81cd60227e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007f81cd606fcb in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 5 (Thread 0x7f81a7fff700 (LWP 11064)):
#0  0x00007f81ccf06d4b in poll () at /usr/lib/libc.so.6
#1  0x00007f81c74dfed3 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f81c74dffae in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f81cd845cf4 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f81cd7e948b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f81cd60227e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007f81cd606fcb in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 4 (Thread 0x7f81b49f1700 (LWP 11063)):
#0  0x00007f81c75075f9 in g_mutex_lock () at /usr/lib/libglib-2.0.so.0
#1  0x00007f81c74dff99 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#2  0x00007f81cd845cf4 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#3  0x00007f81cd7e948b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f81cd60227e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#5  0x00007f81ce1d1bc9 in  () at /usr/lib/libQt5Qml.so.5
#6  0x00007f81cd606fcb in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7f81b51f2700 (LWP 11062)):
#0  0x00007f81ccf1e3d2 in __libc_enable_asynccancel () at /usr/lib/libc.so.6
#1  0x00007f81ccf06d36 in poll () at /usr/lib/libc.so.6
#2  0x00007f81c74dfed3 in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007f81c74dffae in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#4  0x00007f81cd845cf4 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f81cd7e948b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007f81cd60227e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#7  0x00007f81cf97f376 in  () at /usr/lib/libQt5DBus.so.5
#8  0x00007f81cd606fcb in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7f81be3f2700 (LWP 11061)):
#0  0x00007f81ccf06d4b in poll () at /usr/lib/libc.so.6
#1  0x00007f81c724f8e0 in  () at /usr/lib/libxcb.so.1
#2  0x00007f81c7251679 in xcb_wait_for_event () at /usr/lib/libxcb.so.1
#3  0x00007f81c0fc885a in  () at /usr/lib/libQt5XcbQpa.so.5
#4  0x00007f81cd606fcb in  () at /usr/lib/libQt5Core.so.5
#5  0x00007f81c96c208a in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007f81ccf1124f in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7f81d17d0480 (LWP 11059)):
[KCrash Handler]
#5  0x00007f81ce5f5521 in QWindow::raise() () at /usr/lib/libQt5Gui.so.5
#6  0x000055f984f3f3b7 in  ()
#7  0x00007f81cd81ad3f in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#8  0x00007f81cfc08918 in KDBusService::activateRequested(QStringList const&, QString const&) () at /usr/lib/libKF5DBusAddons.so.5
#9  0x00007f81cfc02851 in KDBusService::Activate(QMap<QString, QVariant> const&) () at /usr/lib/libKF5DBusAddons.so.5
#10 0x00007f81cfc086c6 in  () at /usr/lib/libKF5DBusAddons.so.5
#11 0x00007f81cf98aabd in  () at /usr/lib/libQt5DBus.so.5
#12 0x00007f81cf98fc23 in  () at /usr/lib/libQt5DBus.so.5
#13 0x00007f81cf9904f8 in  () at /usr/lib/libQt5DBus.so.5
#14 0x00007f81cf992d0e in  () at /usr/lib/libQt5DBus.so.5
#15 0x00007f81cd81b662 in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#16 0x00007f81cedaef2c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#17 0x00007f81cedb6a06 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#18 0x00007f81cd7eb060 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#19 0x00007f81cd7ed8b6 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/libQt5Core.so.5
#20 0x00007f81cd8466e4 in  () at /usr/lib/libQt5Core.so.5
#21 0x00007f81c74de270 in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#22 0x00007f81c74dff69 in  () at /usr/lib/libglib-2.0.so.0
#23 0x00007f81c74dffae in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#24 0x00007f81cd845cd1 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#25 0x00007f81cd7e948b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#26 0x00007f81cd7f24d8 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#27 0x000055f984f3da2f in  ()
#28 0x00007f81cce3bf6a in __libc_start_main () at /usr/lib/libc.so.6
#29 0x000055f984f3dcba in _start ()

Reported using DrKonqi
Comment 1 Aleix Pol 2017-11-08 12:29:52 UTC
Git commit 63fbc9bf5ef1cbf7fa4743770f032fbe342aa53f by Aleix Pol.
Committed on 08/11/2017 at 12:23.
Pushed by apol into branch 'Plasma/5.11'.

Don't crash if we get into a weird state

Make sure we always quit when the application window is destroyed.

M  +1    -0    discover/DiscoverMainWindow.cpp
M  +3    -0    discover/main.cpp

https://commits.kde.org/discover/63fbc9bf5ef1cbf7fa4743770f032fbe342aa53f